parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls_list

   4  decls_list : func
   5             | decls_list func

   6  func : func_dec LBRACE stmt_list RBRACE

   7  func_dec : ID LPAREN formals_opt RPAREN

   8  formals_opt :
   9              | formal_list

  10  formal_list : ID
  11              | formal_list COMMA ID

  12  stmt_list :
  13            | stmt_list stmt

  14  stmt : RETURN expr SEMI
  15       | expr SEMI
  16       | IF LPAREN expr RPAREN LBRACE stmt_list RBRACE
  17       | IF LPAREN expr RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
  18       | IF LPAREN expr RPAREN LBRACE stmt_list RBRACE ELSE IF LPAREN expr RPAREN LBRACE stmt_list RBRACE
  19       | FOR LPAREN expr SEMI expr SEMI expr RPAREN LBRACE stmt_list RBRACE
  20       | ID ASSIGN expr SEMI
  21       | ID COPY expr SEMI
  22       | ID PLUSEQ expr SEMI
  23       | ID FPLUSEQ expr SEMI
  24       | ID ADDEQ expr SEMI
  25       | ID EADDEQ expr SEMI
  26       | WHILE LPAREN expr RPAREN stmt_list SEMI
  27       | BREAK SEMI
  28       | CONTINUE SEMI

  29  expr : INTLIT
  30       | TRUE
  31       | FALSE
  32       | STRINGLIT
  33       | CHARLIT
  34       | DOUBLELIT
  35       | ID
  36       | LBRACKET actuals_opt RBRACKET
  37       | ID LPAREN actuals_opt RPAREN
  38       | ID LBRACKET expr RBRACKET
  39       | ID LBRACKET ID COLON expr RBRACKET
  40       | expr DOT ID
  41       | expr PLUS expr
  42       | expr MINUS expr
  43       | expr TIMES expr
  44       | expr DIVIDE expr
  45       | expr FPLUS expr
  46       | expr FMINUS expr
  47       | expr FTIMES expr
  48       | expr FDIVIDE expr
  49       | expr EQ expr
  50       | expr NEQ expr
  51       | expr LT expr
  52       | expr LEQ expr
  53       | expr GT expr
  54       | expr GEQ expr
  55       | expr AND expr
  56       | expr OR expr
  57       | expr IN expr
  58       | expr ADD expr
  59       | expr EADD expr
  60       | MINUS expr
  61       | NOT expr
  62       | expr LARROW expr with_opt
  63       | expr RARROW expr with_opt
  64       | expr DASH expr with_opt
  65       | LPAREN RPAREN WITH expr
  66       | LPAREN expr RPAREN WITH expr
  67       | LPAREN graph_list RPAREN WITH expr
  68       | ID COLON expr
  69       | LBRACE rec_opt RBRACE
  70       | LPAREN expr RPAREN

  71  with_opt :
  72           | WITH expr

  73  actuals_opt :
  74              | actuals_list

  75  actuals_list : expr
  76               | actuals_list COMMA expr

  77  graph_list : expr COMMA expr
  78             | graph_list COMMA expr

  79  rec_opt :
  80          | rec_list

  81  rec_list : ID COLON expr
  82           | rec_list COMMA ID COLON expr

  83  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (83)
	decls : .  (2)

	ID  shift 3
	EOF  reduce 2

	program  goto 4
	decls  goto 5
	decls_list  goto 6
	func  goto 7
	func_dec  goto 8


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	func_dec : ID . LPAREN formals_opt RPAREN  (7)

	LPAREN  shift 9
	.  error


state 4
	%entry% : '\001' program .  (83)

	.  reduce 83


state 5
	program : decls . EOF  (1)

	EOF  shift 10
	.  error


state 6
	decls : decls_list .  (3)
	decls_list : decls_list . func  (5)

	ID  shift 3
	EOF  reduce 3

	func  goto 11
	func_dec  goto 8


state 7
	decls_list : func .  (4)

	.  reduce 4


state 8
	func : func_dec . LBRACE stmt_list RBRACE  (6)

	LBRACE  shift 12
	.  error


state 9
	func_dec : ID LPAREN . formals_opt RPAREN  (7)
	formals_opt : .  (8)

	ID  shift 13
	RPAREN  reduce 8

	formals_opt  goto 14
	formal_list  goto 15


state 10
	program : decls EOF .  (1)

	.  reduce 1


state 11
	decls_list : decls_list func .  (5)

	.  reduce 5


state 12
	func : func_dec LBRACE . stmt_list RBRACE  (6)
	stmt_list : .  (12)

	.  reduce 12

	stmt_list  goto 16


state 13
	formal_list : ID .  (10)

	.  reduce 10


state 14
	func_dec : ID LPAREN formals_opt . RPAREN  (7)

	RPAREN  shift 17
	.  error


state 15
	formals_opt : formal_list .  (9)
	formal_list : formal_list . COMMA ID  (11)

	COMMA  shift 18
	RPAREN  reduce 9


state 16
	func : func_dec LBRACE stmt_list . RBRACE  (6)
	stmt_list : stmt_list . stmt  (13)

	LPAREN  shift 19
	LBRACE  shift 20
	RBRACE  shift 21
	MINUS  shift 22
	NOT  shift 23
	TRUE  shift 24
	FALSE  shift 25
	RETURN  shift 26
	IF  shift 27
	FOR  shift 28
	WHILE  shift 29
	LBRACKET  shift 30
	BREAK  shift 31
	CONTINUE  shift 32
	INTLIT  shift 33
	CHARLIT  shift 34
	DOUBLELIT  shift 35
	STRINGLIT  shift 36
	ID  shift 37
	.  error

	stmt  goto 38
	expr  goto 39


state 17
	func_dec : ID LPAREN formals_opt RPAREN .  (7)

	.  reduce 7


state 18
	formal_list : formal_list COMMA . ID  (11)

	ID  shift 40
	.  error


state 19
	expr : LPAREN . RPAREN WITH expr  (65)
	expr : LPAREN . expr RPAREN WITH expr  (66)
	expr : LPAREN . graph_list RPAREN WITH expr  (67)
	expr : LPAREN . expr RPAREN  (70)

	LPAREN  shift 19
	RPAREN  shift 41
	LBRACE  shift 20
	MINUS  shift 22
	NOT  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LBRACKET  shift 30
	INTLIT  shift 33
	CHARLIT  shift 34
	DOUBLELIT  shift 35
	STRINGLIT  shift 36
	ID  shift 42
	.  error

	expr  goto 43
	graph_list  goto 44


state 20
	expr : LBRACE . rec_opt RBRACE  (69)
	rec_opt : .  (79)

	ID  shift 45
	RBRACE  reduce 79

	rec_opt  goto 46
	rec_list  goto 47


state 21
	func : func_dec LBRACE stmt_list RBRACE .  (6)

	.  reduce 6


state 22
	expr : MINUS . expr  (60)

	LPAREN  shift 19
	LBRACE  shift 20
	MINUS  shift 22
	NOT  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LBRACKET  shift 30
	INTLIT  shift 33
	CHARLIT  shift 34
	DOUBLELIT  shift 35
	STRINGLIT  shift 36
	ID  shift 42
	.  error

	expr  goto 48


state 23
	expr : NOT . expr  (61)

	LPAREN  shift 19
	LBRACE  shift 20
	MINUS  shift 22
	NOT  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LBRACKET  shift 30
	INTLIT  shift 33
	CHARLIT  shift 34
	DOUBLELIT  shift 35
	STRINGLIT  shift 36
	ID  shift 42
	.  error

	expr  goto 49


state 24
	expr : TRUE .  (30)

	.  reduce 30


state 25
	expr : FALSE .  (31)

	.  reduce 31


state 26
	stmt : RETURN . expr SEMI  (14)

	LPAREN  shift 19
	LBRACE  shift 20
	MINUS  shift 22
	NOT  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LBRACKET  shift 30
	INTLIT  shift 33
	CHARLIT  shift 34
	DOUBLELIT  shift 35
	STRINGLIT  shift 36
	ID  shift 42
	.  error

	expr  goto 50


state 27
	stmt : IF . LPAREN expr RPAREN LBRACE stmt_list RBRACE  (16)
	stmt : IF . LPAREN expr RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE  (17)
	stmt : IF . LPAREN expr RPAREN LBRACE stmt_list RBRACE ELSE IF LPAREN expr RPAREN LBRACE stmt_list RBRACE  (18)

	LPAREN  shift 51
	.  error


state 28
	stmt : FOR . LPAREN expr SEMI expr SEMI expr RPAREN LBRACE stmt_list RBRACE  (19)

	LPAREN  shift 52
	.  error


state 29
	stmt : WHILE . LPAREN expr RPAREN stmt_list SEMI  (26)

	LPAREN  shift 53
	.  error


state 30
	expr : LBRACKET . actuals_opt RBRACKET  (36)
	actuals_opt : .  (73)

	LPAREN  shift 19
	LBRACE  shift 20
	MINUS  shift 22
	NOT  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LBRACKET  shift 30
	INTLIT  shift 33
	CHARLIT  shift 34
	DOUBLELIT  shift 35
	STRINGLIT  shift 36
	ID  shift 42
	RBRACKET  reduce 73

	expr  goto 54
	actuals_opt  goto 55
	actuals_list  goto 56


state 31
	stmt : BREAK . SEMI  (27)

	SEMI  shift 57
	.  error


state 32
	stmt : CONTINUE . SEMI  (28)

	SEMI  shift 58
	.  error


state 33
	expr : INTLIT .  (29)

	.  reduce 29


state 34
	expr : CHARLIT .  (33)

	.  reduce 33


state 35
	expr : DOUBLELIT .  (34)

	.  reduce 34


state 36
	expr : STRINGLIT .  (32)

	.  reduce 32


state 37
	stmt : ID . ASSIGN expr SEMI  (20)
	stmt : ID . COPY expr SEMI  (21)
	stmt : ID . PLUSEQ expr SEMI  (22)
	stmt : ID . FPLUSEQ expr SEMI  (23)
	stmt : ID . ADDEQ expr SEMI  (24)
	stmt : ID . EADDEQ expr SEMI  (25)
	expr : ID .  (35)
	expr : ID . LPAREN actuals_opt RPAREN  (37)
	expr : ID . LBRACKET expr RBRACKET  (38)
	expr : ID . LBRACKET ID COLON expr RBRACKET  (39)
	expr : ID . COLON expr  (68)

	LPAREN  shift 59
	ASSIGN  shift 60
	COLON  shift 61
	LBRACKET  shift 62
	PLUSEQ  shift 63
	FPLUSEQ  shift 64
	ADDEQ  shift 65
	EADDEQ  shift 66
	COPY  shift 67
	SEMI  reduce 35
	PLUS  reduce 35
	MINUS  reduce 35
	DIVIDE  reduce 35
	DOT  reduce 35
	EQ  reduce 35
	NEQ  reduce 35
	LT  reduce 35
	LEQ  reduce 35
	GT  reduce 35
	GEQ  reduce 35
	AND  reduce 35
	OR  reduce 35
	TIMES  reduce 35
	DASH  reduce 35
	RARROW  reduce 35
	LARROW  reduce 35
	IN  reduce 35
	FPLUS  reduce 35
	FMINUS  reduce 35
	FTIMES  reduce 35
	FDIVIDE  reduce 35
	ADD  reduce 35
	EADD  reduce 35


state 38
	stmt_list : stmt_list stmt .  (13)

	.  reduce 13


state 39
	stmt : expr . SEMI  (15)
	expr : expr . DOT ID  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . FPLUS expr  (45)
	expr : expr . FMINUS expr  (46)
	expr : expr . FTIMES expr  (47)
	expr : expr . FDIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . AND expr  (55)
	expr : expr . OR expr  (56)
	expr : expr . IN expr  (57)
	expr : expr . ADD expr  (58)
	expr : expr . EADD expr  (59)
	expr : expr . LARROW expr with_opt  (62)
	expr : expr . RARROW expr with_opt  (63)
	expr : expr . DASH expr with_opt  (64)

	SEMI  shift 68
	PLUS  shift 69
	MINUS  shift 70
	DIVIDE  shift 71
	DOT  shift 72
	EQ  shift 73
	NEQ  shift 74
	LT  shift 75
	LEQ  shift 76
	GT  shift 77
	GEQ  shift 78
	AND  shift 79
	OR  shift 80
	TIMES  shift 81
	DASH  shift 82
	RARROW  shift 83
	LARROW  shift 84
	IN  shift 85
	FPLUS  shift 86
	FMINUS  shift 87
	FTIMES  shift 88
	FDIVIDE  shift 89
	ADD  shift 90
	EADD  shift 91
	.  error


state 40
	formal_list : formal_list COMMA ID .  (11)

	.  reduce 11


state 41
	expr : LPAREN RPAREN . WITH expr  (65)

	WITH  shift 92
	.  error


state 42
	expr : ID .  (35)
	expr : ID . LPAREN actuals_opt RPAREN  (37)
	expr : ID . LBRACKET expr RBRACKET  (38)
	expr : ID . LBRACKET ID COLON expr RBRACKET  (39)
	expr : ID . COLON expr  (68)

	LPAREN  shift 59
	COLON  shift 61
	LBRACKET  shift 62
	SEMI  reduce 35
	RPAREN  reduce 35
	RBRACE  reduce 35
	COMMA  reduce 35
	PLUS  reduce 35
	MINUS  reduce 35
	DIVIDE  reduce 35
	DOT  reduce 35
	EQ  reduce 35
	NEQ  reduce 35
	LT  reduce 35
	LEQ  reduce 35
	GT  reduce 35
	GEQ  reduce 35
	AND  reduce 35
	OR  reduce 35
	TIMES  reduce 35
	RBRACKET  reduce 35
	DASH  reduce 35
	RARROW  reduce 35
	LARROW  reduce 35
	IN  reduce 35
	WITH  reduce 35
	FPLUS  reduce 35
	FMINUS  reduce 35
	FTIMES  reduce 35
	FDIVIDE  reduce 35
	ADD  reduce 35
	EADD  reduce 35


state 43
	expr : expr . DOT ID  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . FPLUS expr  (45)
	expr : expr . FMINUS expr  (46)
	expr : expr . FTIMES expr  (47)
	expr : expr . FDIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . AND expr  (55)
	expr : expr . OR expr  (56)
	expr : expr . IN expr  (57)
	expr : expr . ADD expr  (58)
	expr : expr . EADD expr  (59)
	expr : expr . LARROW expr with_opt  (62)
	expr : expr . RARROW expr with_opt  (63)
	expr : expr . DASH expr with_opt  (64)
	expr : LPAREN expr . RPAREN WITH expr  (66)
	expr : LPAREN expr . RPAREN  (70)
	graph_list : expr . COMMA expr  (77)

	RPAREN  shift 93
	COMMA  shift 94
	PLUS  shift 69
	MINUS  shift 70
	DIVIDE  shift 71
	DOT  shift 72
	EQ  shift 73
	NEQ  shift 74
	LT  shift 75
	LEQ  shift 76
	GT  shift 77
	GEQ  shift 78
	AND  shift 79
	OR  shift 80
	TIMES  shift 81
	DASH  shift 82
	RARROW  shift 83
	LARROW  shift 84
	IN  shift 85
	FPLUS  shift 86
	FMINUS  shift 87
	FTIMES  shift 88
	FDIVIDE  shift 89
	ADD  shift 90
	EADD  shift 91
	.  error


state 44
	expr : LPAREN graph_list . RPAREN WITH expr  (67)
	graph_list : graph_list . COMMA expr  (78)

	RPAREN  shift 95
	COMMA  shift 96
	.  error


state 45
	rec_list : ID . COLON expr  (81)

	COLON  shift 97
	.  error


state 46
	expr : LBRACE rec_opt . RBRACE  (69)

	RBRACE  shift 98
	.  error


state 47
	rec_opt : rec_list .  (80)
	rec_list : rec_list . COMMA ID COLON expr  (82)

	COMMA  shift 99
	RBRACE  reduce 80


state 48
	expr : expr . DOT ID  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . FPLUS expr  (45)
	expr : expr . FMINUS expr  (46)
	expr : expr . FTIMES expr  (47)
	expr : expr . FDIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . AND expr  (55)
	expr : expr . OR expr  (56)
	expr : expr . IN expr  (57)
	expr : expr . ADD expr  (58)
	expr : expr . EADD expr  (59)
	expr : MINUS expr .  (60)
	expr : expr . LARROW expr with_opt  (62)
	expr : expr . RARROW expr with_opt  (63)
	expr : expr . DASH expr with_opt  (64)

	.  reduce 60


state 49
	expr : expr . DOT ID  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . FPLUS expr  (45)
	expr : expr . FMINUS expr  (46)
	expr : expr . FTIMES expr  (47)
	expr : expr . FDIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . AND expr  (55)
	expr : expr . OR expr  (56)
	expr : expr . IN expr  (57)
	expr : expr . ADD expr  (58)
	expr : expr . EADD expr  (59)
	expr : NOT expr .  (61)
	expr : expr . LARROW expr with_opt  (62)
	expr : expr . RARROW expr with_opt  (63)
	expr : expr . DASH expr with_opt  (64)

	.  reduce 61


state 50
	stmt : RETURN expr . SEMI  (14)
	expr : expr . DOT ID  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . FPLUS expr  (45)
	expr : expr . FMINUS expr  (46)
	expr : expr . FTIMES expr  (47)
	expr : expr . FDIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . AND expr  (55)
	expr : expr . OR expr  (56)
	expr : expr . IN expr  (57)
	expr : expr . ADD expr  (58)
	expr : expr . EADD expr  (59)
	expr : expr . LARROW expr with_opt  (62)
	expr : expr . RARROW expr with_opt  (63)
	expr : expr . DASH expr with_opt  (64)

	SEMI  shift 100
	PLUS  shift 69
	MINUS  shift 70
	DIVIDE  shift 71
	DOT  shift 72
	EQ  shift 73
	NEQ  shift 74
	LT  shift 75
	LEQ  shift 76
	GT  shift 77
	GEQ  shift 78
	AND  shift 79
	OR  shift 80
	TIMES  shift 81
	DASH  shift 82
	RARROW  shift 83
	LARROW  shift 84
	IN  shift 85
	FPLUS  shift 86
	FMINUS  shift 87
	FTIMES  shift 88
	FDIVIDE  shift 89
	ADD  shift 90
	EADD  shift 91
	.  error


state 51
	stmt : IF LPAREN . expr RPAREN LBRACE stmt_list RBRACE  (16)
	stmt : IF LPAREN . expr RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE  (17)
	stmt : IF LPAREN . expr RPAREN LBRACE stmt_list RBRACE ELSE IF LPAREN expr RPAREN LBRACE stmt_list RBRACE  (18)

	LPAREN  shift 19
	LBRACE  shift 20
	MINUS  shift 22
	NOT  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LBRACKET  shift 30
	INTLIT  shift 33
	CHARLIT  shift 34
	DOUBLELIT  shift 35
	STRINGLIT  shift 36
	ID  shift 42
	.  error

	expr  goto 101


state 52
	stmt : FOR LPAREN . expr SEMI expr SEMI expr RPAREN LBRACE stmt_list RBRACE  (19)

	LPAREN  shift 19
	LBRACE  shift 20
	MINUS  shift 22
	NOT  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LBRACKET  shift 30
	INTLIT  shift 33
	CHARLIT  shift 34
	DOUBLELIT  shift 35
	STRINGLIT  shift 36
	ID  shift 42
	.  error

	expr  goto 102


state 53
	stmt : WHILE LPAREN . expr RPAREN stmt_list SEMI  (26)

	LPAREN  shift 19
	LBRACE  shift 20
	MINUS  shift 22
	NOT  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LBRACKET  shift 30
	INTLIT  shift 33
	CHARLIT  shift 34
	DOUBLELIT  shift 35
	STRINGLIT  shift 36
	ID  shift 42
	.  error

	expr  goto 103


state 54
	expr : expr . DOT ID  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . FPLUS expr  (45)
	expr : expr . FMINUS expr  (46)
	expr : expr . FTIMES expr  (47)
	expr : expr . FDIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . AND expr  (55)
	expr : expr . OR expr  (56)
	expr : expr . IN expr  (57)
	expr : expr . ADD expr  (58)
	expr : expr . EADD expr  (59)
	expr : expr . LARROW expr with_opt  (62)
	expr : expr . RARROW expr with_opt  (63)
	expr : expr . DASH expr with_opt  (64)
	actuals_list : expr .  (75)

	PLUS  shift 69
	MINUS  shift 70
	DIVIDE  shift 71
	DOT  shift 72
	EQ  shift 73
	NEQ  shift 74
	LT  shift 75
	LEQ  shift 76
	GT  shift 77
	GEQ  shift 78
	AND  shift 79
	OR  shift 80
	TIMES  shift 81
	DASH  shift 82
	RARROW  shift 83
	LARROW  shift 84
	IN  shift 85
	FPLUS  shift 86
	FMINUS  shift 87
	FTIMES  shift 88
	FDIVIDE  shift 89
	ADD  shift 90
	EADD  shift 91
	RPAREN  reduce 75
	COMMA  reduce 75
	RBRACKET  reduce 75


state 55
	expr : LBRACKET actuals_opt . RBRACKET  (36)

	RBRACKET  shift 104
	.  error


state 56
	actuals_opt : actuals_list .  (74)
	actuals_list : actuals_list . COMMA expr  (76)

	COMMA  shift 105
	RPAREN  reduce 74
	RBRACKET  reduce 74


state 57
	stmt : BREAK SEMI .  (27)

	.  reduce 27


state 58
	stmt : CONTINUE SEMI .  (28)

	.  reduce 28


state 59
	expr : ID LPAREN . actuals_opt RPAREN  (37)
	actuals_opt : .  (73)

	LPAREN  shift 19
	LBRACE  shift 20
	MINUS  shift 22
	NOT  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LBRACKET  shift 30
	INTLIT  shift 33
	CHARLIT  shift 34
	DOUBLELIT  shift 35
	STRINGLIT  shift 36
	ID  shift 42
	RPAREN  reduce 73

	expr  goto 54
	actuals_opt  goto 106
	actuals_list  goto 56


state 60
	stmt : ID ASSIGN . expr SEMI  (20)

	LPAREN  shift 19
	LBRACE  shift 20
	MINUS  shift 22
	NOT  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LBRACKET  shift 30
	INTLIT  shift 33
	CHARLIT  shift 34
	DOUBLELIT  shift 35
	STRINGLIT  shift 36
	ID  shift 42
	.  error

	expr  goto 107


state 61
	expr : ID COLON . expr  (68)

	LPAREN  shift 19
	LBRACE  shift 20
	MINUS  shift 22
	NOT  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LBRACKET  shift 30
	INTLIT  shift 33
	CHARLIT  shift 34
	DOUBLELIT  shift 35
	STRINGLIT  shift 36
	ID  shift 42
	.  error

	expr  goto 108


state 62
	expr : ID LBRACKET . expr RBRACKET  (38)
	expr : ID LBRACKET . ID COLON expr RBRACKET  (39)

	LPAREN  shift 19
	LBRACE  shift 20
	MINUS  shift 22
	NOT  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LBRACKET  shift 30
	INTLIT  shift 33
	CHARLIT  shift 34
	DOUBLELIT  shift 35
	STRINGLIT  shift 36
	ID  shift 109
	.  error

	expr  goto 110


state 63
	stmt : ID PLUSEQ . expr SEMI  (22)
